# cbor_formats

./: Cargo.toml  README.md
.github/workflows/: rust.yml
cbor_derive/: Cargo.toml  README.md
cbor_derive/src/: attributes.rs  cbor_derive_utils.rs  field.rs  lib.rs  struct_to_array.rs  struct_to_map.rs  struct_to_one_or_more.rs
cfcli/: Cargo.toml
cfcli/src/: args.rs  comid.rs  corim.rs  coswid.rs  cots.rs  eat.rs  main.rs  utils.rs
common/: Cargo.toml  README.md
common/src/: arrays.rs  choices.rs  lib.rs  tuple.rs  tuple_map.rs
common/tests/: arrays.rs  choices.rs  common.rs
corim/: Cargo.toml  README.md
corim/src/: arrays.rs  choices.rs  lib.rs  maps.rs
corim/tests/: arrays.rs  choices.rs  maps.rs  misc.rs
corim/tests/examples/: comid-psa-iakpub.cbor  corim_1.cbor  corim_full.cbor
cose/: Cargo.toml  README.md
cose/src/: arrays.rs  choices.rs  lib.rs  maps.rs
cose/tests/: arrays.rs  cose_wg_examples.rs  utils.rs
cose/tests/examples/: aes-ccm-01.cbor  aes-ccm-enc-01.cbor  cbc-mac-01.cbor  cbc-mac-enc-01.cbor  ecdsa-01.cbor  ecdsa-sig-01.cbor  tagged_sign1.cbor  untagged_sign1.cbor
coswid/: Cargo.toml  README.md
coswid/src/: arrays.rs  choices.rs  lib.rs  maps.rs
coswid/tests/: maps.rs
cots/: Cargo.toml  README.md
cots/src/: arrays.rs  choices.rs  lib.rs  maps.rs
cots/tests/: arrays.rs  maps.rs  utils.rs
cots/tests/examples/: cots_ signed.cbor  cots_trunc.cbor  tas1.cbor  tas1_invalid.cbor  tas2.cbor  tas2_invalid.cbor  tas3.cbor  tas3_invalid.cbor
eat/: Cargo.toml  README.md
eat/src/: arrays.rs  cbor_specific.rs  choices.rs  json_specific.rs  lib.rs  maps.rs
eat/tests/: arrays.rs  choices.rs  json_specific.rs  maps.rs  utils.rs
eat/tests/examples/: a1_jwe.jwt
webauthn_asf/: Cargo.toml  README.md
webauthn_asf/src/: lib.rs
webauthn_asf/tests/: asf.rs
webauthn_asf/tests/examples/: 9c_device_cert.scep.attestation.cbor
