[package]
name = "common"
description = "CBOR-focused encoders/decoders for structures common to various specifications"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/carl-wallace/cbor-formats/tree/main/cbor_derive"
categories = ["cryptography", "data-structures", "encoding", "no-std", "parser-implementations"]
keywords = ["cbor", "json", "crypto", "ietf", "corim", "eat"]
readme = "README.md"
version = "0.1.0"
edition = "2021"
rust-version = "1.63"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cbor_derive = { version = "0.1.0", path = "../cbor_derive" }
ciborium = "0.2.0"
subtle-encoding = {version = "0.5.1", default-features = false, features = ["hex", "alloc"]}
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
hex-literal = "0.3.4"
serde_bytes = "0.11"
serde_repr = "0.1.9"
num_enum = "0.5.7"
#serde-enum-str = {version = "0.2.5", default-features = false}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
